스웨거 제거

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
             amount: 100,
             orderId: 'VQLxKu8uj_RNhx_6gZPWk',
             orderName: '토스 머그컵 외 2건',
-            customerName: '정토스',
+            customerName: '치토스',
             successUrl: 'http://localhost:8080/success',
             failUrl: 'http://localhost:8080/fail',
         })
