--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
         tossPayments.requestPayment('카드', {
             amount: 100,
             orderId: 'VQLxKu8uj_RNhx_6gZPWk',
-            orderName: '토스 머그컵 외 2건',
+            orderName: '토스 머그컵',
             customerName: '치토스',
             successUrl: 'http://localhost:8080/success',
             failUrl: 'http://localhost:8080/fail',
